# advent-of-code

./: LICENSE
2016/: 2016.sln
2016/Logic/: AssemblyInfo.cs
2016/Logic.Test/: Day10_Test.cs  Day12_Test.cs  Day1_Test.cs  Day2_Test.cs  Day3_Test.cs  Day4_Test.cs  Day5_Test.cs  Day6_Test.cs  Day7_Test.cs  Day8_Test.cs  Day9_Test.cs  Logic.Test.csproj  Utils.cs
2016/Logic/Day1/: EasterBunnyDistanceCalculator.cs
2016/Logic/Day10/: BotController.cs
2016/Logic/Day12/: AssembunnyInterpreter.cs
2016/Logic/Day2/: BathroomCodeDetector.cs
2016/Logic/Day3/: TriangleValidator.cs
2016/Logic/Day4/: RoomNameDecrypter.cs
2016/Logic/Day5/: PasswordDecoder.cs
2016/Logic/Day6/: RepetitionCodeDecipherer.cs
2016/Logic/Day7/: SSLValidator.cs  TLSValidator.cs
2016/Logic/Day8/: Screen.cs  ScreenOperator.cs
2016/Logic/Day9/: DataDecompressor.cs
2021/: .gitignore  LICENSE  aoc2021.cabal  day01.hs  day02.hs  shell.nix
2021/src/: Day01.hs  Day02.hs  Day03.hs
2021/test/: Day01Spec.hs  spec.hs
2023/: .gitignore  flake.nix
2023/01/: run.hs
2023/02/: run.hs
2023/04/: run.hs
2023/05/: run.hs
2023/06/: run.hs
2023/08/: run.hs
2023/10/: run.hs
2023/11/: run.hs
2024/src/: day1.rs
2025/: build.zig  day1.zig  day2.zig  day3.zig  day4.zig  day5.zig  day6.zig  util.zig
2025/src/: day1.zig  day10.zig  day2.zig  day3.zig  day4.zig  day5.zig  day6.zig  day7.zig  day8.zig  day9.zig
