cabal-version:      3.0
name:               aoc2021
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Johannes Maier
maintainer:         johannes.maier@mailbox.org
category:           Recreational

library
  exposed-modules:  Day01
                  , Day02
  build-depends:    base
  hs-source-dirs:   src
  default-language: Haskell2010
