cabal-version:      3.0
name:               aoc2021
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Johannes Maier
maintainer:         johannes.maier@mailbox.org
category:           Recreational

library
  exposed-modules:  Day01
                  , Day02
                  , Day03
  build-depends:    base
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite aoc2021-test
  other-modules:    Day01Spec
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          spec.hs
  build-depends:    base
                  , aoc2021
                  , hspec
